kubernetes/prod/whoami/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
